fixing more spacing issues on the home page

--- a/web/php_project/css/styles.css
+++ b/web/php_project/css/styles.css
@@ -164,7 +164,7 @@ h2 {
 .testimonial {
     width: 250px;
     height: 300px;
-    margin: 0 10px;
+    margin: 0 10px 30px 10px;
     text-align: center;
 }
 
@@ -183,6 +183,10 @@ h4 {
 
 #registration {
     background-color: white;
+}
+
+#registration > h3 {
+    padding: 10px;
 }
 
 #registration-form {
